--- a/index.html
+++ b/index.html
@@ -14,4 +14,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="theme-color" content="black">
     </head>
+    <body>
+        <h1>Spoonfuls of Good</h1>
+    </body>
 </html>
