--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="manifest.json">
+        <link rel="manifest" href="/manifest.json">
         <meta name="application-name" content="Spoonfuls of Good">
         <meta name="apple-mobile-web-app-title" content="Spoons">
         <meta name="apple-mobile-web-app-capable" content="yes">
