--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="application-name" content="Spoonfuls of Good">
         <meta name="apple-mobile-web-app-title" content="Spoons">
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="theme-color" content="black">
     </head>
