--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <title>Spoonfuls of Good</title>
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"> -->
+        <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> -->
+        <!-- <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"> -->
         <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png"
         <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png"
         <link rel="manifest" href="/manifest.json">
