--- a/calendar.html
+++ b/calendar.html
@@ -9,7 +9,6 @@
         <link rel="manifest" href="/manifest.json">
     </head>
     <body>
-        <h1>Spoonfuls of Good</h1>
-        <a href = 'calendar.html'>Calendar</a>
+        <h1>Calendar</h1>
     </body>
 </html>
