Adding other pages and linking between all

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <body>
         <h1>Spoonfuls of Good</h1>
         <a href = 'calendar.html'>Calendar</a>
+        <a href = 'reflections.html'>Reflections</a>
+        <a href = 'study.html'>Study</a>
+        <a href = 'mindfulness.html'>Mindfulness</a>
     </body>
 </html>
