--- a/reflections.html
+++ b/reflections.html
@@ -9,9 +9,9 @@
         <link rel="manifest" href="/manifest.json">
     </head>
     <body>
-        <h1>Calendar</h1>
+        <h1>Reflections</h1>
+        <a href = 'calendar.html'>Calendar</a>
         <a href = 'index.html'>Main</a>
-        <a href = 'reflections.html'>Reflections</a>
         <a href = 'study.html'>Study</a>
         <a href = 'mindfulness.html'>Mindfulness</a>
     </body>
